[package]
name = "terbium"
authors = ["jay3332", "Cryptex"]
version = "0.0.1"
edition = "2021"
description = "The performant yet elegant and feature-packed programming language. Made with Rust."
license = "AGPL-3.0-or-later"
homepage = "https://github.com/TerbiumLang/Terbium"
repository = "https://github.com/TerbiumLang/Terbium"
readme = "README.md"
keywords = ["terbium", "language", "lang", "interpreter", "compiler", "trb"]
categories = ["compilers", "command-line-interface", "parsing", "wasm"]

[[bin]]
name = "terbium"
path = "src/bin/terbium.rs"

[workspace]
members = ["terbium_analyzer", "terbium_bytecode", "terbium_grammar", "terbium_interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "^0.1.5"
clap = { version = "3.1", features = ["derive"] }
terbium_analyzer = { version = "0", path = "terbium_analyzer" }
terbium_bytecode = { version = "0", path = "terbium_bytecode" }
terbium_grammar = { version = "0", path = "terbium_grammar" }
terbium_interpreter = { version = "0", path = "terbium_interpreter" }

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
