[package]
name = "terbium"
authors = ["jay3332"]
version = "0.0.1"
edition = "2021"
description = "The performant yet elegant and feature-packed programming language. Made with Rust."
license = "AGPL-3.0-or-later"
homepage = "https://github.com/TerbiumLang/Terbium"
repository = "https://github.com/TerbiumLang/Terbium"
readme = "README.md"
keywords = ["terbium", "language", "lang", "interpreter", "compiler", "trb"]
categories = ["compilers", "command-line-interface", "parsing", "wasm"]

# [[bin]]
# name = "terbium"
# path = "src/bin/terbium.rs"

[workspace]
members = ["grammar"]

[dependencies]
grammar = { path = "grammar" }

[profile.dev]
opt-level = 2
split-debuginfo = "unpacked"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1