[package]
name = "grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2"
chumsky = "0.9"
common = { path = "../common" }
diagnostics = { path = "../diagnostics" }
unicode-xid = "0.2.4"