[package]
name = "terbium_compiler"
authors = ["jay3332", "Cryptex"]
version = "0.0.1"
edition = "2021"
description = "The performant yet elegant and feature-packed programming language. Made with Rust."
license = "AGPL-3.0-or-later"
homepage = "https://github.com/TerbiumLang/Terbium"
repository = "https://github.com/TerbiumLang/Terbium"
readme = "../README.md"
keywords = ["terbium", "language", "lang", "interpreter", "compiler", "parser", "trb", "llvm"]
categories = ["compilers", "parsing"]

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
terbium_grammar = { version = "0", path = "../terbium_grammar" }