[package]
name = "terbium_grammar"
authors = ["jay3332", "Cryptex"]
version = "0.0.1"
edition = "2021"
description = "The performant yet elegant and feature-packed programming language. Made with Rust."
license = "MIT"
homepage = "https://github.com/TerbiumLang/Terbium"
repository = "https://github.com/TerbiumLang/Terbium"
readme = "../README.md"
keywords = ["terbium", "language", "lang", "interpreter", "compiler", "parser", "trb"]
categories = ["compilers", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "^0.8"
