[package]
name = "terbium_interpreter"
authors = ["jay3332"]
version = "0.0.1"
edition = "2021"
description = "The performant yet elegant and feature-packed programming language. Made with Rust."
license = "AGPL-3.0-or-later"
homepage = "https://github.com/TerbiumLang/Terbium"
repository = "https://github.com/TerbiumLang/Terbium"
readme = "../README.md"
keywords = ["terbium", "language", "lang", "interpreter", "compiler", "trb"]
categories = ["compilers", "parsing", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terbium_grammar = { version = "0", path = "../terbium_grammar" }
terbium_bytecode = { version = "0", path = "../terbium_bytecode" }