[package]
name = "tests"
authors = ["jay3332", "Cryptex"]
version = "0.0.1"
edition = "2021"
description = "The performant yet elegant and feature-packed programming language. Made with Rust."
license = "AGPL-3.0-or-later"
homepage = "https://github.com/TerbiumLang/Terbium"
repository = "https://github.com/TerbiumLang/Terbium"
readme = "../README.md"
keywords = ["terbium", "language", "lang", "interpreter", "compiler", "trb"]
categories = ["compilers", "parsing", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terbium = { version = "0", path = "../" }
